--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,17 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   http: ^1.1.0
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  hive_generator: ^2.0.0
-  build_runner: ^2.4.6
+ 
   flutter_svg: ^2.0.7
-  adaptive_theme: ^3.3.0
+  like_button: ^2.0.5
   flutter_screenutil: ^5.8.4
-
+  sqflite: ^2.2.8+4
+  
+  cached_network_image: ^3.2.3
+  path_provider: ^2.0.15
+  path: ^1.8.3
+  fluttertoast: ^8.2.2
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
